<resources>
    <string name="app_name">Lab6</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="LoginName">Login Name</string>
    <string name="password">Password</string>
    <string name="Switch">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="loginbutton">LOGIN</string>
    <string name="dialog_message">Exit this Activity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="switchOn">Switch is On</string> 
    <string name="switchOff">Switch is Off</string>
    <string name="button2">Start Chat</string>
    <string name="button4">Send</string>
    <string name="weather">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
</resources>


