<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:gravity="fill"
    tools:context="khushpreetsingh.androidlabs.ListItemsActivity">




        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:layout_row="0"
            />


        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:layout_row="0"
             />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Switch"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:layout_row="1"

            />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />


    </GridLayout>

